--- a/AlgoTraderSite/Site.Master
+++ b/AlgoTraderSite/Site.Master
@@ -66,8 +66,6 @@
                         <li><a runat="server" href="~/">Home</a></li>
 						<li><a runat="server" href="~/WatchList">Watchlist</a></li>
 						<li><a runat="server" href="~/Portfolio">My Porfolio</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -82,7 +80,7 @@
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; <%: DateTime.Now.Year %> - Pennsylvania State University</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Pennsylvania State University | <a id="A1" runat="server" href="~/About">About</a> | <a id="A2" runat="server" href="~/Contact">Contact</a></p>
             </div>
         </div>
     </footer>
