--- a/AlgoTraderSite/Site.Master
+++ b/AlgoTraderSite/Site.Master
@@ -11,7 +11,7 @@
     <webopt:BundleReference runat="server" Path="~/Content/css" /> 
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-	<script src="Scripts/jquery-1.8.2.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<script type="text/javascript" src="Scripts/AlgoTrader/AlgoTrader.js"></script>
     <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
 </head>
