--- a/AlgoTraderSite/Site.Master
+++ b/AlgoTraderSite/Site.Master
@@ -68,6 +68,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
 						<li><a runat="server" href="~/WatchList">Watchlist</a></li>
 						<li><a runat="server" href="~/Portfolio">My Porfolio</a></li>
+						<li><a runat="server" href="~/Settings">Settings</a></li>
                     </ul>
                 </nav>
             </div>
