--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -142,6 +142,7 @@ footer {
 	border-top: 1px solid lightblue;
 	clear: both;
 	font-size: 1em;
+	margin-top: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
 }
