css - added border around positions

--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -482,19 +482,23 @@ input[type="checkbox"] {
 input[type="submit"],
 input[type="button"],
 button {
-	background-color: lightgray;
-	border: 1px solid darkgray;
+	background-color: whitesmoke;
+	border: 1px solid deepskyblue;
 	cursor: pointer;
-	margin-left: 5px;
-	margin-right: 5px;
-	min-width: 30px;
+	margin: 0;
+	min-width: 35px;
 	width: auto;
 }
 
 	input[type="button"].toggle {
-		width: 35px;
+		width: 38px;
 		vertical-align: central;
+		border-radius: 50px;
 	}
+
+		input[type="button"].toggle:hover {
+			background-color: deepskyblue;
+		}
 
 td input[type="submit"],
 td input[type="button"],
@@ -561,14 +565,19 @@ input[type="checkbox"].input-validation-error {
 /* tables
 ----------------------------------------------------------*/
 table {
-	border-collapse: collapse;
 	border-spacing: 0;
 	border: 0 none;
 	width: 100%;
 }
 
 	table.main {
+		border: 1px solid #E4E4E4;
 		font-size: 1.5em;
+		margin-bottom: 10px;
+		border-radius: 5px;
+
+		-webkit-box-shadow: 0px 2px 2px rgba(0,0,0,.2);
+		box-shadow: 0px 2px 2px rgba(0,0,0,.2);
 	}
 
 	table.sub {
