--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -456,12 +456,16 @@ label {
 		display: inline;
 	}
 
-input, textarea {
+input, textarea, select {
 	border: 1px solid #e2e2e2;
 	background: #fff;
 	color: #333;
 	font-size: 1.2em;
 	padding: 5px;
+	-moz-transition: all .15s ease;
+	-o-transition: all .15s ease;
+	-webkit-transition: all .15s ease;
+	transition: all .15s ease;
 }
 
 textarea {
@@ -470,7 +474,9 @@ textarea {
 }
 
 	input:focus, textarea:focus {
-		border: 1px solid #7ac0da;
+		outline-color: orange;
+		-webkit-box-shadow: 0px 0px 5px 2px orange;
+		box-shadow: 0px 0px 5px 2px orange;
 	}
 
 input[type="checkbox"] {
@@ -498,6 +504,7 @@ button {
 
 		input[type="button"].toggle:hover {
 			background-color: deepskyblue;
+			color: whitesmoke;
 		}
 
 td input[type="submit"],
@@ -576,8 +583,8 @@ table {
 		margin-bottom: 10px;
 		border-radius: 5px;
 
-		-webkit-box-shadow: 0px 2px 2px rgba(0,0,0,.2);
-		box-shadow: 0px 2px 2px rgba(0,0,0,.2);
+		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.2);
+		box-shadow: 0px 1px 1px rgba(0,0,0,.2);
 	}
 
 	table.sub {
