--- a/AlgoTraderSite/Site.Master
+++ b/AlgoTraderSite/Site.Master
@@ -3,50 +3,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head runat="server">
-    <meta charset="utf-8" />
-    <title><%: Page.Title %> - AlgoTrader</title>
-    <asp:PlaceHolder runat="server">     
-          <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>  
-    <webopt:BundleReference runat="server" Path="~/Content/css" /> 
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/AlgoTrader/AlgoTrader.js"></script>
-    <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
+	<meta charset="utf-8" />
+	<title><%: Page.Title %> - AlgoTrader</title>
+	<asp:PlaceHolder runat="server">
+		<%: Scripts.Render("~/bundles/modernizr") %>
+    </asp:PlaceHolder>
+	<webopt:BundleReference runat="server" Path="~/Content/css" />
+	<link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+	<meta name="viewport" content="width=device-width" />
+	<asp:ContentPlaceHolder runat="server" ID="HeadContent" />
 </head>
 <body>
-    <form runat="server">
-    <asp:ScriptManager runat="server">
-        <Scripts>
-            <%--To learn more about bundling scripts in ScriptManager see http://go.microsoft.com/fwlink/?LinkID=272931&clcid=0x409 --%>
-            <%--Framework Scripts--%>
-            
-            <asp:ScriptReference Name="MsAjaxBundle" />
-            <asp:ScriptReference Name="jquery" />
-            <asp:ScriptReference Name="jquery.ui.combined" />
-            <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-            <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-            <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-            <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-            <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-            <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-            <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-            <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-            <asp:ScriptReference Name="WebFormsBundle" />
-            <%--Site Scripts--%>
+	<form runat="server">
+		<asp:ScriptManager ID="ScriptManager1" runat="server" ScriptPath="~/Scripts/">
+			<Scripts>
+				<%--To learn more about bundling scripts in ScriptManager see http://go.microsoft.com/fwlink/?LinkID=272931&clcid=0x409 --%>
+				<%--Framework Scripts--%>
 
-        </Scripts>
-    </asp:ScriptManager>
-    <header>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p class="site-title">
-                    <a runat="server" href="~/">AlgoTrader</a>
-                </p>
-            </div>
-            <div class="float-right">
-                <!--<section id="login">
+				<asp:ScriptReference Name="MsAjaxBundle" />
+				<asp:ScriptReference Name="jquery" Path="~/Scripts/jquery-1.8.2.min.js" />
+				<asp:ScriptReference Name="jquery.ui.combined" />
+				<asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
+				<asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
+				<asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
+				<asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
+				<asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
+				<asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
+				<asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
+				<asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
+				<asp:ScriptReference Name="WebFormsBundle" />
+				<asp:ScriptReference Path="~/Scripts/AlgoTrader/AlgoTrader.js" />
+				<%--Site Scripts--%>
+			</Scripts>
+		</asp:ScriptManager>
+		<script type="text/javascript" src="~/Scripts/AlgoTrader/AlgoTrader.js"></script>
+		<header>
+			<div class="content-wrapper">
+				<div class="float-left">
+					<p class="site-title">
+						<a runat="server" href="~/">AlgoTrader</a>
+					</p>
+				</div>
+				<div class="float-right">
+					<!--<section id="login">
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul>
@@ -63,30 +62,30 @@
                         </LoggedInTemplate>
                     </asp:LoginView>
                 </section>-->
-                <nav>
-                    <ul id="menu">
-                        <li><a runat="server" href="~/">Home</a></li>
-						<li><a runat="server" href="~/WatchList">Watchlist</a></li>
-						<li><a runat="server" href="~/Portfolio">My Portfolio</a></li>
-						<li><a runat="server" href="~/Settings">Settings</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
-    <div id="body">
-        <asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
-        <section class="content-wrapper main-content clear-fix">
-            <asp:ContentPlaceHolder runat="server" ID="MainContent" />
-        </section>
-    </div>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-right">
-                <p>&copy; <%: DateTime.Now.Year %> - Pennsylvania State University | <a id="A1" runat="server" href="~/About">About</a> | <a id="A2" runat="server" href="~/Contact">Contact</a></p>
-            </div>
-        </div>
-    </footer>
-    </form>
+					<nav>
+						<ul id="menu">
+							<li><a runat="server" href="~/">Home</a></li>
+							<li><a runat="server" href="~/WatchList">Watchlist</a></li>
+							<li><a runat="server" href="~/Portfolio">My Portfolio</a></li>
+							<li><a runat="server" href="~/Settings">Settings</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</header>
+		<div id="body">
+			<asp:ContentPlaceHolder runat="server" ID="FeaturedContent" />
+			<section class="content-wrapper main-content clear-fix">
+				<asp:ContentPlaceHolder runat="server" ID="MainContent" />
+			</section>
+		</div>
+		<footer>
+			<div class="content-wrapper">
+				<div class="float-right">
+					<p>&copy; <%: DateTime.Now.Year %> - Pennsylvania State University | <a id="A1" runat="server" href="~/About">About</a> | <a id="A2" runat="server" href="~/Contact">Contact</a></p>
+				</div>
+			</div>
+		</footer>
+	</form>
 </body>
 </html>
