--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -187,10 +187,6 @@ footer {
 	padding-left: 10px;
 }
 
-.panel-watchlist input[type="button"] {
-	font-size: 5em;
-}
-
 .panel-wrapper > .maincontent {
 	/*float: left;*/
 	margin-left: 260px;
@@ -202,7 +198,6 @@ footer {
 }
 
 .maincontent .input-group {
-	float: right;
 	padding-bottom: 20px;
 }
 
@@ -280,7 +275,7 @@ ul#menu {
 	position: absolute;
 	top: 1.1em;
 	right: 0px;
-	text-transform: lowercase;
+	text-transform: uppercase;
 }
 
 	ul#menu li {
@@ -556,6 +551,14 @@ button {
 	padding-right: 10px;
 }
 
+	input[type="submit"].delete, input[type="button"].delete {
+		background-color: darksalmon;
+	}
+
+		input[type="submit"].delete:hover {
+			background-color: red;
+		}
+
 	input[type="button"].toggle {
 		width: 38px;
 		vertical-align: central;
@@ -570,9 +573,7 @@ button {
 td input[type="submit"],
 td input[type="button"],
 td button {
-	font-size: 1em;
 	padding: 4px;
-	margin-right: 4px;
 }
 
 input[type="checkbox"].onoffswitch-checkbox {
@@ -664,10 +665,21 @@ input[type="checkbox"].onoffswitch-checkbox {
 }
 
 /* info and errors */
-.message-info {
-	border: 1px solid;
-	clear: both;
-	padding: 10px 20px;
+.message-wrapper {
+	position: absolute;
+	width: 500px;
+	top: 150px;
+	margin-left: 50%;
+	left: -262px;
+	-webkit-box-shadow: 0px 1px 2px rgba(0,0,0,.5);
+	box-shadow: 0px 1px 2px rgba(0,0,0,.5);
+	-moz-animation: messageFadeOut 5s ease;
+	-o-animation: messageFadeOut 5s ease;
+	-webkit-animation: messageFadeOut 5s ease;
+	animation: messageFadeOut 5s ease;
+	-o-animation-fill-mode: both;
+	-webkit-animation-fill-mode: both;
+	animation-fill-mode: both;
 }
 
 .message-error {
@@ -679,14 +691,17 @@ input[type="checkbox"].onoffswitch-checkbox {
 }
 
 .message-success, .message-fail {
+	border: 1px solid;
+	border-radius: 2px;
+	padding: 5px;
+	text-align: center;
 	position: absolute;
 	width: 500px;
 	top: 150px;
 	margin-left: 50%;
-	left: -240px;
-	border-radius: 2px;
-	padding: 5px;
-	text-align: center;
+	left: -262px;
+	-webkit-box-shadow: 0px 1px 2px rgba(0,0,0,.5);
+	box-shadow: 0px 1px 2px rgba(0,0,0,.5);
 	-moz-animation: messageFadeOut 5s ease;
 	-o-animation: messageFadeOut 5s ease;
 	-webkit-animation: messageFadeOut 5s ease;
@@ -697,10 +712,12 @@ input[type="checkbox"].onoffswitch-checkbox {
 }
 
 .message-success {
+	border-color: darkgreen;
 	background: lightgreen;
 }
 
 .message-fail {
+	border-color: darkred;
 	background: salmon;
 }
 
@@ -855,14 +872,16 @@ tr {
 @-moz-keyframes messageFadeOut {
 	0% {
 		opacity: 0;
+		top: 120px;
 	}
 
 	10% {
-		opacity: .85;
+		opacity: 1;
+		top: 150px;
 	}
 
 	90% {
-		opacity: .85;
+		opacity: 1;
 	}
 
 	100% {
@@ -873,14 +892,16 @@ tr {
 @-webkit-keyframes messageFadeOut {
 	0% {
 		opacity: 0;
+		top: 120px;
 	}
 
 	10% {
-		opacity: .85;
+		opacity: 1;
+		top: 150px;
 	}
 
 	90% {
-		opacity: .85;
+		opacity: 1;
 	}
 
 	100% {
@@ -891,14 +912,16 @@ tr {
 @keyframes messageFadeOut {
 	0% {
 		opacity: 0;
+		top: 120px;
 	}
 
 	10% {
-		opacity: .85;
+		opacity: 1;
+		top: 150px;
 	}
 
 	90% {
-		opacity: .85;
+		opacity: 1;
 	}
 
 	100% {
