--- a/AlgoTraderSite/Content/Fonts.css
+++ b/AlgoTraderSite/Content/Fonts.css
@@ -1,10 +1,10 @@
-﻿@font-face {
+@font-face {
 	font-family: 'icomoon';
-	src:url('Fonts/icomoon.eot');
-	src:url('Fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('Fonts/icomoon.woff') format('woff'),
-		url('Fonts/icomoon.ttf') format('truetype'),
-		url('Fonts/icomoon.svg#icomoon') format('svg');
+	src:url('fonts/icomoon.eot');
+	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('fonts/icomoon.woff') format('woff'),
+		url('fonts/icomoon.ttf') format('truetype'),
+		url('fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -27,9 +27,8 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
-.icon-home, .icon-home-2, .icon-settings, .icon-equalizer, .icon-cog, .icon-cogs, .icon-wrench, .icon-close, .icon-spam, .icon-checkmark-circle, .icon-cancel-circle, .icon-remove, .icon-bars, .icon-stats, .icon-coin, .icon-bullhorn, .icon-star, .icon-eye {
+.icon-home, .icon-settings, .icon-equalizer, .icon-cog, .icon-cogs, .icon-wrench, .icon-close, .icon-spam, .icon-checkmark-circle, .icon-cancel-circle, .icon-remove, .icon-bars, .icon-stats, .icon-coin, .icon-bullhorn, .icon-star, .icon-eye, .icon-stats-2, .icon-plus-alt, .icon-minus-alt, .icon-image, .icon-type, .icon-plus, .icon-minus, .icon-checkmark, .icon-checkmark-2 {
 	font-family: 'icomoon';
-	font-size: .9em;
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -39,10 +38,7 @@ you can use the generic selector below, but it's slower:
 	-webkit-font-smoothing: antialiased;
 }
 .icon-home:before {
-	content: "\2617 ";
-}
-.icon-home-2:before {
-	content: "\2616 ";
+	content: "\2616";
 }
 .icon-settings:before {
 	content: "\2630";
@@ -91,4 +87,31 @@ you can use the generic selector below, but it's slower:
 }
 .icon-eye:before {
 	content: "\235c";
+}
+.icon-stats-2:before {
+	content: "\25a4";
+}
+.icon-plus-alt:before {
+	content: "\2191";
+}
+.icon-minus-alt:before {
+	content: "\2193";
+}
+.icon-image:before {
+	content: "\2197";
+}
+.icon-type:before {
+	content: "\25d3";
+}
+.icon-plus:before {
+	content: "\21e1";
+}
+.icon-minus:before {
+	content: "\21e3";
+}
+.icon-checkmark:before {
+	content: "\21b3";
+}
+.icon-checkmark-2:before {
+	content: "\21b4";
 }
