--- a/AlgoTraderSite/Content/Site.css
+++ b/AlgoTraderSite/Content/Site.css
@@ -8,12 +8,13 @@ html {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	font-size: .625em;
 }
 
 body {
 	font-family: 'Open Sans', sans-serif;
 	background-color: #fff;
-	font-size: 1em;
+	font-size: 1.2em;
 	margin: 0;
 	padding: 0;
 	height: 100%;
@@ -69,7 +70,7 @@ h4, h5, h6 {
 }
 
 h1 {
-	font-size: 2.5em;
+	font-size: 4em;
 	font-weight: 300;
 }
 
@@ -111,7 +112,7 @@ h5, h6 {
 ----------------------------------------------------------*/
 
 .content-wrapper {
-	margin: 0 auto;
+	margin: 0;
 	min-width: 960px;
 	height: 100%;
 }
@@ -132,15 +133,14 @@ h5, h6 {
 }
 
 header .content-wrapper {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-top: 25px;
+	padding-left: 15px;
 	position: relative;
 }
 
 footer {
 	border-top: 1px solid lightblue;
 	clear: both;
-	font-size: 1em;
 	padding-left: 20px;
 	padding-right: 20px;
 }
@@ -150,7 +150,7 @@ footer {
 }
 
 	.panel-wrapper > .panel-watchlist {
-		background-color: floralwhite;
+		background-color: lightsteelblue;
 		width: 250px;
 		float: left;
 		padding: 10px 0px 10px 0px;
@@ -170,7 +170,7 @@ footer {
 		margin: 0px;
 		cursor: pointer;
 		display: block;
-		font-size: 1em;
+		font-size: 1.2em;
 		color: #333;
 	}
 
@@ -188,7 +188,6 @@ footer {
 }
 
 .panel-wrapper > .maincontent {
-	/*float: left;*/
 	margin-left: 260px;
 	padding-top: 10px;
 	padding-right: 10px;
@@ -201,16 +200,15 @@ footer {
 	padding-bottom: 20px;
 }
 
+
 /* site title
 ----------------------------------------------------------*/
 .site-title {
-	color: #333;
 	font-family: 'Righteous', cursive;
-	font-size: 5em;
+	font-size: 6.5em;
+	line-height: 50px;
 	font-weight: bold;
-	margin: 0;
 	position: relative;
-	top: 21px;
 	text-transform: uppercase;
 }
 
@@ -266,14 +264,13 @@ footer {
 	}
 
 
-/* menu
+/* nav
 ----------------------------------------------------------*/
 ul#menu {
-	font-size: 1.8em;
+	font-size: 2em;
 	font-weight: 300;
 	text-align: right;
 	position: absolute;
-	top: 1.1em;
 	right: 0px;
 	text-transform: uppercase;
 }
@@ -335,10 +332,6 @@ ul#menu {
 		-o-animation-fill-mode: both;
 		-webkit-animation-fill-mode: both;
 		animation-fill-mode: both;
-	}
-
-	.featured p {
-		font-size: 1.1em;
 	}
 
 /* page titles */
@@ -477,25 +470,6 @@ fieldset.open-auth-providers {
 }
 
 /* forms */
-fieldset {
-	border: none;
-	margin: 0;
-	padding: 0;
-}
-
-	fieldset legend {
-		display: none;
-	}
-
-	fieldset ol {
-		padding: 0;
-		list-style: none;
-	}
-
-		fieldset ol li {
-			padding-bottom: 5px;
-		}
-
 label {
 	display: inline;
 }
@@ -508,8 +482,9 @@ input, textarea, select {
 	border: 1px solid #e2e2e2;
 	background: #fff;
 	color: #333;
-	font-size: 1em;
+	font-size: 1.2em;
 	padding: 5px;
+	border-radius: 2px;
 	-moz-transition: all .15s ease;
 	-o-transition: all .15s ease;
 	-webkit-transition: all .15s ease;
@@ -517,8 +492,6 @@ input, textarea, select {
 }
 
 textarea {
-	font-family: inherit;
-	width: 500px;
 }
 
 	input:focus, textarea:focus {
@@ -541,25 +514,25 @@ button {
 	border: 0 none;
 	border-radius: 3px;
 	cursor: pointer;
-	margin: 0;
-	min-width: 35px;
-	width: auto;
-	font-size: .8em;
 	font-weight: 700;
 	text-transform: uppercase;
-	padding-left: 10px;
-	padding-right: 10px;
+	padding: 8px 15px 8px 15px;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-webkit-transition: all .2s ease;
+	transition: all .2s ease;
 }
 
-	input[type="submit"].delete, input[type="button"].delete {
-		background-color: darksalmon;
+	button.delete {
+		background: salmon;
 	}
 
-		input[type="submit"].delete:hover {
-			background-color: red;
+		button.delete:hover {
+			background: red;
 		}
 
 	input[type="button"].toggle {
+		height: 38px;
 		width: 38px;
 		vertical-align: central;
 		border-radius: 50px;
@@ -569,12 +542,6 @@ button {
 			background-color: deepskyblue;
 			color: whitesmoke;
 		}
-
-td input[type="submit"],
-td input[type="button"],
-td button {
-	padding: 4px;
-}
 
 input[type="checkbox"].onoffswitch-checkbox {
 	display: none;
@@ -616,7 +583,7 @@ input[type="checkbox"].onoffswitch-checkbox {
 		height: 30px;
 		padding: 0;
 		line-height: 30px;
-		font-size: 14px;
+		font-size: 1.4em;
 		color: white;
 		font-family: Trebuchet, Arial, sans-serif;
 		font-weight: bold;
@@ -682,14 +649,6 @@ input[type="checkbox"].onoffswitch-checkbox {
 	animation-fill-mode: both;
 }
 
-.message-error {
-	clear: both;
-	color: #e80c4d;
-	font-size: 1.1em;
-	font-weight: bold;
-	margin: 20px 0 10px 0;
-}
-
 .message-success, .message-fail {
 	border: 1px solid;
 	border-radius: 2px;
@@ -697,8 +656,8 @@ input[type="checkbox"].onoffswitch-checkbox {
 	text-align: center;
 	position: absolute;
 	width: 500px;
-	top: 150px;
 	margin-left: 50%;
+	top: 120px;
 	left: -262px;
 	-webkit-box-shadow: 0px 1px 2px rgba(0,0,0,.5);
 	box-shadow: 0px 1px 2px rgba(0,0,0,.5);
@@ -763,19 +722,23 @@ table {
 
 	table.main {
 		border: 1px solid #E4E4E4;
-		font-size: 1.3em;
+		font-size: 1.4em;
 		margin-bottom: 10px;
 		border-radius: 5px;
 		-webkit-box-shadow: 0px 1px 1px rgba(0,0,0,.2);
 		box-shadow: 0px 1px 1px rgba(0,0,0,.2);
 	}
 
+		table.main input {
+			font-size: .71em;
+		}
+
 	table.sub {
-		font-size: .7em;
+		font-size: .9em;
 	}
 
 th {
-	font-size: 1em;
+	color: dimgray;
 	text-align: left;
 	border: none 0px;
 	text-transform: uppercase;
@@ -817,20 +780,12 @@ th {
 			content: '▼';
 		}
 
-td {
-	border: 0 none;
-}
-
 tr {
 	background-color: none;
 }
 
 	tr.main:hover, tr.main:active {
 		background-color: #eee;
-	}
-
-	tr.pager td {
-		padding: 0 0.25em 0 0;
 	}
 
 @-moz-keyframes fadeIn {
@@ -872,12 +827,12 @@ tr {
 @-moz-keyframes messageFadeOut {
 	0% {
 		opacity: 0;
-		top: 120px;
+		top: 90px;
 	}
 
 	10% {
 		opacity: 1;
-		top: 150px;
+		top: 120px;
 	}
 
 	90% {
@@ -888,16 +843,17 @@ tr {
 		opacity: 0;
 	}
 }
+
 
 @-webkit-keyframes messageFadeOut {
 	0% {
 		opacity: 0;
-		top: 120px;
+		top: 90px;
 	}
 
 	10% {
 		opacity: 1;
-		top: 150px;
+		top: 120px;
 	}
 
 	90% {
@@ -909,15 +865,16 @@ tr {
 	}
 }
 
+
 @keyframes messageFadeOut {
 	0% {
 		opacity: 0;
-		top: 120px;
+		top: 90px;
 	}
 
 	10% {
 		opacity: 1;
-		top: 150px;
+		top: 120px;
 	}
 
 	90% {
