--- a/AlgoTraderSite/Content/Fonts.css
+++ b/AlgoTraderSite/Content/Fonts.css
@@ -1,17 +1,17 @@
 @font-face {
-	font-family: 'icomoon';
-	src:url('fonts/icomoon.eot');
-	src:url('fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/icomoon.woff') format('woff'),
-		url('fonts/icomoon.ttf') format('truetype'),
-		url('fonts/icomoon.svg#icomoon') format('svg');
+	font-family: 'algotrader';
+	src:url('fonts/algotrader.eot');
+	src:url('fonts/algotrader.eot?#iefix') format('embedded-opentype'),
+		url('fonts/algotrader.woff') format('woff'),
+		url('fonts/algotrader.ttf') format('truetype'),
+		url('fonts/algotrader.svg#algotrader') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-icon]:before {
-	font-family: 'icomoon';
+	font-family: 'algotrader';
 	content: attr(data-icon);
 	speak: none;
 	font-weight: normal;
@@ -27,8 +27,8 @@ Instead of a list of all class selectors,
 you can use the generic selector below, but it's slower:
 [class*="icon-"] {
 */
-.icon-home, .icon-settings, .icon-equalizer, .icon-cog, .icon-cogs, .icon-wrench, .icon-close, .icon-spam, .icon-checkmark-circle, .icon-cancel-circle, .icon-remove, .icon-bars, .icon-stats, .icon-coin, .icon-bullhorn, .icon-star, .icon-eye, .icon-stats-2, .icon-plus-alt, .icon-minus-alt, .icon-image, .icon-type, .icon-plus, .icon-minus, .icon-checkmark, .icon-checkmark-2 {
-	font-family: 'icomoon';
+.icon-dollar, .icon-sort-by-alphabet, .icon-sort-by-alphabet-alt, .icon-lock, .icon-home, .icon-eye-open, .icon-cogs, .icon-exclamation-sign, .icon-plus-sign, .icon-minus-sign, .icon-remove-sign, .icon-ok-sign, .icon-trash, .icon-plus, .icon-minus, .icon-question-sign, .icon-info-sign, .icon-sort-by-attributes-alt, .icon-sort-by-attributes, .icon-sort-by-order, .icon-sort-by-order-alt, .icon-briefcase {
+	font-family: 'algotrader';
 	speak: none;
 	font-style: normal;
 	font-weight: normal;
@@ -37,81 +37,69 @@ you can use the generic selector below, but it's slower:
 	line-height: 1;
 	-webkit-font-smoothing: antialiased;
 }
+.icon-dollar:before {
+	content: "\e000";
+}
+.icon-sort-by-alphabet:before {
+	content: "\e001";
+}
+.icon-sort-by-alphabet-alt:before {
+	content: "\e002";
+}
+.icon-lock:before {
+	content: "\e003";
+}
 .icon-home:before {
-	content: "\2616";
+	content: "\e004";
 }
-.icon-settings:before {
-	content: "\2630";
-}
-.icon-equalizer:before {
-	content: "\2631";
-}
-.icon-cog:before {
-	content: "\2638";
+.icon-eye-open:before {
+	content: "\e005";
 }
 .icon-cogs:before {
-	content: "\25ce";
+	content: "\e006";
 }
-.icon-wrench:before {
-	content: "\273f";
+.icon-exclamation-sign:before {
+	content: "\e007";
 }
-.icon-close:before {
-	content: "\2715";
+.icon-plus-sign:before {
+	content: "\e008";
 }
-.icon-spam:before {
-	content: "\2762";
+.icon-minus-sign:before {
+	content: "\e009";
 }
-.icon-checkmark-circle:before {
-	content: "\2713";
+.icon-remove-sign:before {
+	content: "\e00a";
 }
-.icon-cancel-circle:before {
-	content: "\2717";
+.icon-ok-sign:before {
+	content: "\e00b";
 }
-.icon-remove:before {
-	content: "\2701";
-}
-.icon-bars:before {
-	content: "\2652";
-}
-.icon-stats:before {
-	content: "\2653";
-}
-.icon-coin:before {
-	content: "\25a0";
-}
-.icon-bullhorn:before {
-	content: "\25c4";
-}
-.icon-star:before {
-	content: "\274b";
-}
-.icon-eye:before {
-	content: "\235c";
-}
-.icon-stats-2:before {
-	content: "\25a4";
-}
-.icon-plus-alt:before {
-	content: "\2191";
-}
-.icon-minus-alt:before {
-	content: "\2193";
-}
-.icon-image:before {
-	content: "\2197";
-}
-.icon-type:before {
-	content: "\25d3";
+.icon-trash:before {
+	content: "\e00c";
 }
 .icon-plus:before {
-	content: "\21e1";
+	content: "\e00d";
 }
 .icon-minus:before {
-	content: "\21e3";
+	content: "\e00e";
 }
-.icon-checkmark:before {
-	content: "\21b3";
+.icon-question-sign:before {
+	content: "\e00f";
 }
-.icon-checkmark-2:before {
-	content: "\21b4";
+.icon-info-sign:before {
+	content: "\e010";
+}
+.icon-sort-by-attributes-alt:before {
+	content: "\e011";
+}
+.icon-sort-by-attributes:before {
+	content: "\e012";
+}
+.icon-sort-by-order:before {
+	content: "\e013";
+}
+.icon-sort-by-order-alt:before {
+	content: "\e014";
+}
+.icon-briefcase:before {
+	content: "\e015";
 }
